--- a/scss/header/_header-page.scss
+++ b/scss/header/_header-page.scss
@@ -3,7 +3,7 @@
 .about-wrapper {
     .header-about-wrapper {
         display: grid;
-        background-image: url(img/header-top.jpg);
+        background-image: url(../img/header-top.jpg);
         background-size: cover;
         height: 200px;
         justify-content: center;
